# foot-gun

./: Cargo.toml  README.md
src/: lib.rs
