[package]
name = "foot-gun"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Friendly aliases for your unsafe code"
documentation = "https://docs.rs/foot-gun"
readme = "README.md"
homepage = "https://github.com/ewpratten/foot-gun"
repository = "https://github.com/ewpratten/foot-gun"
license = "GPL-3.0"
keywords = ["joke"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
